--- a/Debug/Makefile
+++ b/Debug/Makefile
@@ -223,7 +223,9 @@ Makefile: ../Lianliankan.pro C:/Qt/Qt5.8.0/5.8/mingw53_32/mkspecs/win32-g++/qmak
 		../Lianliankan.pro \
 		C:/Qt/Qt5.8.0/5.8/mingw53_32/lib/qtmaind.prl \
 		C:/Qt/Qt5.8.0/5.8/mingw53_32/lib/Qt5Widgets.prl \
+		C:/Qt/Qt5.8.0/5.8/mingw53_32/lib/Qt5Multimedia.prl \
 		C:/Qt/Qt5.8.0/5.8/mingw53_32/lib/Qt5Gui.prl \
+		C:/Qt/Qt5.8.0/5.8/mingw53_32/lib/Qt5Network.prl \
 		C:/Qt/Qt5.8.0/5.8/mingw53_32/lib/Qt5Core.prl
 	$(QMAKE) -o Makefile ..\Lianliankan.pro -spec win32-g++ "CONFIG+=debug" "CONFIG+=qml_debug"
 C:/Qt/Qt5.8.0/5.8/mingw53_32/mkspecs/features/spec_pre.prf:
@@ -390,7 +392,9 @@ C:/Qt/Qt5.8.0/5.8/mingw53_32/mkspecs/features/lex.prf:
 ../Lianliankan.pro:
 C:/Qt/Qt5.8.0/5.8/mingw53_32/lib/qtmaind.prl:
 C:/Qt/Qt5.8.0/5.8/mingw53_32/lib/Qt5Widgets.prl:
+C:/Qt/Qt5.8.0/5.8/mingw53_32/lib/Qt5Multimedia.prl:
 C:/Qt/Qt5.8.0/5.8/mingw53_32/lib/Qt5Gui.prl:
+C:/Qt/Qt5.8.0/5.8/mingw53_32/lib/Qt5Network.prl:
 C:/Qt/Qt5.8.0/5.8/mingw53_32/lib/Qt5Core.prl:
 qmake: FORCE
 	@$(QMAKE) -o Makefile ..\Lianliankan.pro -spec win32-g++ "CONFIG+=debug" "CONFIG+=qml_debug"
